# serializer version: 1
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-chi2]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.6468 ┆ 0.6295 ┆ … ┆ 0.9684 ┆ 0.7484 ┆ 0.6845 ┆ 1.0358 │
  │ 2   ┆ 0.6468 ┆ 0.0    ┆ 0.688  ┆ … ┆ 1.0619 ┆ 0.705  ┆ 0.7735 ┆ 0.654  │
  │ 3   ┆ 0.6295 ┆ 0.688  ┆ 0.0    ┆ … ┆ 0.7127 ┆ 0.5899 ┆ 1.0347 ┆ 1.0403 │
  │ 4   ┆ 0.7231 ┆ 1.032  ┆ 0.8691 ┆ … ┆ 1.2382 ┆ 0.6818 ┆ 0.8554 ┆ 1.4142 │
  │ 5   ┆ 0.7894 ┆ 0.4025 ┆ 0.7813 ┆ … ┆ 1.032  ┆ 0.7962 ┆ 0.7729 ┆ 0.6574 │
  │ 6   ┆ 0.827  ┆ 0.2906 ┆ 0.8111 ┆ … ┆ 1.0164 ┆ 0.8924 ┆ 0.8563 ┆ 0.4212 │
  │ 7   ┆ 0.9684 ┆ 1.0619 ┆ 0.7127 ┆ … ┆ 0.0    ┆ 1.1065 ┆ 1.2274 ┆ 1.0187 │
  │ 8   ┆ 0.7484 ┆ 0.705  ┆ 0.5899 ┆ … ┆ 1.1065 ┆ 0.0    ┆ 1.0703 ┆ 1.1639 │
  │ 9   ┆ 0.6845 ┆ 0.7735 ┆ 1.0347 ┆ … ┆ 1.2274 ┆ 1.0703 ┆ 0.0    ┆ 0.9555 │
  │ 10  ┆ 1.0358 ┆ 0.654  ┆ 1.0403 ┆ … ┆ 1.0187 ┆ 1.1639 ┆ 0.9555 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-dtw]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 5.0 ┆ 5.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ 6.0 │
  │ 2   ┆ 5.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 2.0 ┆ 2.0 │
  │ 3   ┆ 5.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 2.0 ┆ 2.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 2.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 3.0 │
  │ 6   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 4.0 │
  │ 7   ┆ 6.0 ┆ 4.0 ┆ 2.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 2.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 4.0 │
  │ 10  ┆ 6.0 ┆ 2.0 ┆ 6.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 4.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-edit]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 6.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ 3.0 │
  │ 3   ┆ 6.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 3.0 ┆ 3.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 3.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 5.0 │
  │ 6   ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 6.0 │
  │ 7   ┆ 6.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 6.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 6.0 ┆ 3.0 ┆ 6.0 ┆ … ┆ 5.0 ┆ 6.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-lcp]
  shape: (10, 11)
  ┌─────┬──────┬──────┬──────┬───┬──────┬──────┬──────┬──────┐
  │ id  ┆ 1    ┆ 2    ┆ 3    ┆ … ┆ 7    ┆ 8    ┆ 9    ┆ 10   │
  │ --- ┆ ---  ┆ ---  ┆ ---  ┆   ┆ ---  ┆ ---  ┆ ---  ┆ ---  │
  │ i64 ┆ f32  ┆ f32  ┆ f32  ┆   ┆ f32  ┆ f32  ┆ f32  ┆ f32  │
  ╞═════╪══════╪══════╪══════╪═══╪══════╪══════╪══════╪══════╡
  │ 1   ┆ 0.0  ┆ 12.0 ┆ 14.0 ┆ … ┆ 11.0 ┆ 11.0 ┆ 6.0  ┆ 15.0 │
  │ 2   ┆ 12.0 ┆ 0.0  ┆ 12.0 ┆ … ┆ 9.0  ┆ 9.0  ┆ 8.0  ┆ 13.0 │
  │ 3   ┆ 14.0 ┆ 12.0 ┆ 0.0  ┆ … ┆ 7.0  ┆ 7.0  ┆ 10.0 ┆ 13.0 │
  │ 4   ┆ 10.0 ┆ 6.0  ┆ 10.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 6.0  ┆ 11.0 │
  │ 5   ┆ 10.0 ┆ 8.0  ┆ 10.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 6.0  ┆ 11.0 │
  │ 6   ┆ 11.0 ┆ 9.0  ┆ 7.0  ┆ … ┆ 4.0  ┆ 4.0  ┆ 7.0  ┆ 10.0 │
  │ 7   ┆ 11.0 ┆ 9.0  ┆ 7.0  ┆ … ┆ 0.0  ┆ 4.0  ┆ 7.0  ┆ 10.0 │
  │ 8   ┆ 11.0 ┆ 9.0  ┆ 7.0  ┆ … ┆ 4.0  ┆ 0.0  ┆ 7.0  ┆ 10.0 │
  │ 9   ┆ 6.0  ┆ 8.0  ┆ 10.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 0.0  ┆ 11.0 │
  │ 10  ┆ 15.0 ┆ 13.0 ┆ 13.0 ┆ … ┆ 10.0 ┆ 10.0 ┆ 11.0 ┆ 0.0  │
  └─────┴──────┴──────┴──────┴───┴──────┴──────┴──────┴──────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-lcs]
  shape: (10, 11)
  ┌─────┬──────┬─────┬─────┬───┬─────┬─────┬─────┬──────┐
  │ id  ┆ 1    ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10   │
  │ --- ┆ ---  ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ ---  │
  │ i64 ┆ f32  ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32  │
  ╞═════╪══════╪═════╪═════╪═══╪═════╪═════╪═════╪══════╡
  │ 1   ┆ 0.0  ┆ 8.0 ┆ 8.0 ┆ … ┆ 7.0 ┆ 5.0 ┆ 6.0 ┆ 11.0 │
  │ 2   ┆ 8.0  ┆ 0.0 ┆ 6.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ 5.0  │
  │ 3   ┆ 8.0  ┆ 6.0 ┆ 0.0 ┆ … ┆ 3.0 ┆ 3.0 ┆ 6.0 ┆ 7.0  │
  │ 4   ┆ 6.0  ┆ 6.0 ┆ 4.0 ┆ … ┆ 5.0 ┆ 3.0 ┆ 4.0 ┆ 11.0 │
  │ 5   ┆ 6.0  ┆ 4.0 ┆ 6.0 ┆ … ┆ 3.0 ┆ 5.0 ┆ 4.0 ┆ 7.0  │
  │ 6   ┆ 7.0  ┆ 5.0 ┆ 5.0 ┆ … ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ 6.0  │
  │ 7   ┆ 7.0  ┆ 5.0 ┆ 3.0 ┆ … ┆ 0.0 ┆ 4.0 ┆ 5.0 ┆ 6.0  │
  │ 8   ┆ 5.0  ┆ 5.0 ┆ 3.0 ┆ … ┆ 4.0 ┆ 0.0 ┆ 5.0 ┆ 8.0  │
  │ 9   ┆ 6.0  ┆ 4.0 ┆ 6.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 0.0 ┆ 7.0  │
  │ 10  ┆ 11.0 ┆ 5.0 ┆ 7.0 ┆ … ┆ 6.0 ┆ 8.0 ┆ 7.0 ┆ 0.0  │
  └─────┴──────┴─────┴─────┴───┴─────┴─────┴─────┴──────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-linearpairwise]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.25   ┆ 0.7143 │
  │ 2   ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.5    │
  │ 3   ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 1.0    ┆ 0.8333 │
  │ 4   ┆ 0.5    ┆ 0.5    ┆ 1.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.5    ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 0.25   ┆ 0.75   ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.5    │
  │ 6   ┆ 0.6667 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.3333 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 1.0    ┆ 0.6667 ┆ … ┆ 0.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 8   ┆ 1.0    ┆ 0.6667 ┆ 0.3333 ┆ … ┆ 0.6667 ┆ 0.0    ┆ 1.0    ┆ 1.0    │
  │ 9   ┆ 0.25   ┆ 0.75   ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.5    ┆ 0.8333 ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-softdtw]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -5.498  ┆ -0.7217 ┆ -0.9274 ┆ … ┆ 2.3551  ┆ 1.4773  ┆ 0.2947  ┆ -0.9351 │
  │ 2   ┆ -0.7217 ┆ -4.6066 ┆ -0.0266 ┆ … ┆ 1.3082  ┆ 1.7155  ┆ -1.2971 ┆ -3.3243 │
  │ 3   ┆ -0.9274 ┆ -0.0266 ┆ -4.032  ┆ … ┆ -0.6656 ┆ -0.8559 ┆ 1.1549  ┆ 0.2747  │
  │ 4   ┆ -0.7334 ┆ -0.2498 ┆ -0.2482 ┆ … ┆ 1.1083  ┆ -0.6417 ┆ -0.5288 ┆ 2.5509  │
  │ 5   ┆ 1.2617  ┆ -1.6015 ┆ -0.0619 ┆ … ┆ 0.0732  ┆ 1.0161  ┆ -0.1502 ┆ -0.4863 │
  │ 6   ┆ 1.8974  ┆ 1.6308  ┆ 0.1232  ┆ … ┆ 0.5526  ┆ -0.7886 ┆ 0.8659  ┆ 1.5175  │
  │ 7   ┆ 2.3551  ┆ 1.3082  ┆ -0.6656 ┆ … ┆ -1.2681 ┆ 0.5526  ┆ 1.1083  ┆ 1.154   │
  │ 8   ┆ 1.4773  ┆ 1.7155  ┆ -0.8559 ┆ … ┆ 0.5526  ┆ -1.8268 ┆ 1.4964  ┆ 2.5863  │
  │ 9   ┆ 0.2947  ┆ -1.2971 ┆ 1.1549  ┆ … ┆ 1.1083  ┆ 1.4964  ┆ -1.9769 ┆ -0.1057 │
  │ 10  ┆ -0.9351 ┆ -3.3243 ┆ 0.2747  ┆ … ┆ 1.154   ┆ 2.5863  ┆ -0.1057 ┆ -6.9676 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-chi2]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.865  ┆ 0.6944 ┆ … ┆ 1.296  ┆ 1.1334 ┆ 0.8375 ┆ 0.3441 │
  │ 2   ┆ 0.865  ┆ 0.0    ┆ 0.8671 ┆ … ┆ 0.7782 ┆ 0.8806 ┆ 0.6623 ┆ 0.7923 │
  │ 3   ┆ 0.6944 ┆ 0.8671 ┆ 0.0    ┆ … ┆ 1.167  ┆ 0.9054 ┆ 1.0798 ┆ 0.5815 │
  │ 4   ┆ 0.5151 ┆ 0.9944 ┆ 0.6207 ┆ … ┆ 1.4142 ┆ 1.2439 ┆ 1.1185 ┆ 0.4487 │
  │ 5   ┆ 0.6943 ┆ 1.072  ┆ 0.4999 ┆ … ┆ 1.4142 ┆ 1.1727 ┆ 1.234  ┆ 0.5954 │
  │ 6   ┆ 0.6995 ┆ 1.2235 ┆ 0.8119 ┆ … ┆ 1.4142 ┆ 1.164  ┆ 1.049  ┆ 0.7958 │
  │ 7   ┆ 1.296  ┆ 0.7782 ┆ 1.167  ┆ … ┆ 0.0    ┆ 0.4444 ┆ 0.818  ┆ 1.3012 │
  │ 8   ┆ 1.1334 ┆ 0.8806 ┆ 0.9054 ┆ … ┆ 0.4444 ┆ 0.0    ┆ 0.9276 ┆ 1.1211 │
  │ 9   ┆ 0.8375 ┆ 0.6623 ┆ 1.0798 ┆ … ┆ 0.818  ┆ 0.9276 ┆ 0.0    ┆ 0.9585 │
  │ 10  ┆ 0.3441 ┆ 0.7923 ┆ 0.5815 ┆ … ┆ 1.3012 ┆ 1.1211 ┆ 0.9585 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-dtw]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 6.0 ┆ 4.0 ┆ 4.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 2.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 4.0 ┆ 5.0 ┆ 3.0 │
  │ 4   ┆ 6.0 ┆ 3.0 ┆ 2.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 5   ┆ 4.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 4.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 6.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-edit]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 7.0 ┆ 5.0 ┆ 5.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 5.0 ┆ 5.0 ┆ 4.0 │
  │ 4   ┆ 6.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 6.0 │
  │ 5   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 3.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 3.0 ┆ 5.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 7.0 ┆ 4.0 ┆ 5.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 5.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 5.0 ┆ 5.0 ┆ 4.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-lcp]
  shape: (10, 11)
  ┌─────┬──────┬──────┬──────┬───┬──────┬──────┬──────┬──────┐
  │ id  ┆ 1    ┆ 2    ┆ 3    ┆ … ┆ 7    ┆ 8    ┆ 9    ┆ 10   │
  │ --- ┆ ---  ┆ ---  ┆ ---  ┆   ┆ ---  ┆ ---  ┆ ---  ┆ ---  │
  │ i64 ┆ f32  ┆ f32  ┆ f32  ┆   ┆ f32  ┆ f32  ┆ f32  ┆ f32  │
  ╞═════╪══════╪══════╪══════╪═══╪══════╪══════╪══════╪══════╡
  │ 1   ┆ 0.0  ┆ 14.0 ┆ 14.0 ┆ … ┆ 11.0 ┆ 11.0 ┆ 12.0 ┆ 11.0 │
  │ 2   ┆ 14.0 ┆ 0.0  ┆ 12.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 8.0  ┆ 13.0 │
  │ 3   ┆ 14.0 ┆ 12.0 ┆ 0.0  ┆ … ┆ 9.0  ┆ 9.0  ┆ 10.0 ┆ 13.0 │
  │ 4   ┆ 12.0 ┆ 10.0 ┆ 6.0  ┆ … ┆ 7.0  ┆ 7.0  ┆ 8.0  ┆ 11.0 │
  │ 5   ┆ 12.0 ┆ 10.0 ┆ 10.0 ┆ … ┆ 7.0  ┆ 7.0  ┆ 8.0  ┆ 11.0 │
  │ 6   ┆ 11.0 ┆ 9.0  ┆ 7.0  ┆ … ┆ 6.0  ┆ 6.0  ┆ 7.0  ┆ 10.0 │
  │ 7   ┆ 11.0 ┆ 7.0  ┆ 9.0  ┆ … ┆ 0.0  ┆ 2.0  ┆ 5.0  ┆ 10.0 │
  │ 8   ┆ 11.0 ┆ 7.0  ┆ 9.0  ┆ … ┆ 2.0  ┆ 0.0  ┆ 5.0  ┆ 10.0 │
  │ 9   ┆ 12.0 ┆ 8.0  ┆ 10.0 ┆ … ┆ 5.0  ┆ 5.0  ┆ 0.0  ┆ 11.0 │
  │ 10  ┆ 11.0 ┆ 13.0 ┆ 13.0 ┆ … ┆ 10.0 ┆ 10.0 ┆ 11.0 ┆ 0.0  │
  └─────┴──────┴──────┴──────┴───┴──────┴──────┴──────┴──────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-lcs]
  shape: (10, 11)
  ┌─────┬──────┬──────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1    ┆ 2    ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ ---  ┆ ---  ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32  ┆ f32  ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪══════╪══════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0  ┆ 10.0 ┆ 8.0 ┆ … ┆ 9.0 ┆ 9.0 ┆ 6.0 ┆ 7.0 │
  │ 2   ┆ 10.0 ┆ 0.0  ┆ 6.0 ┆ … ┆ 3.0 ┆ 5.0 ┆ 4.0 ┆ 7.0 │
  │ 3   ┆ 8.0  ┆ 6.0  ┆ 0.0 ┆ … ┆ 7.0 ┆ 7.0 ┆ 6.0 ┆ 7.0 │
  │ 4   ┆ 6.0  ┆ 6.0  ┆ 4.0 ┆ … ┆ 7.0 ┆ 5.0 ┆ 4.0 ┆ 7.0 │
  │ 5   ┆ 6.0  ┆ 6.0  ┆ 4.0 ┆ … ┆ 7.0 ┆ 5.0 ┆ 6.0 ┆ 5.0 │
  │ 6   ┆ 5.0  ┆ 7.0  ┆ 5.0 ┆ … ┆ 6.0 ┆ 4.0 ┆ 5.0 ┆ 6.0 │
  │ 7   ┆ 9.0  ┆ 3.0  ┆ 7.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 8.0 │
  │ 8   ┆ 9.0  ┆ 5.0  ┆ 7.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 3.0 ┆ 6.0 │
  │ 9   ┆ 6.0  ┆ 4.0  ┆ 6.0 ┆ … ┆ 3.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 7.0  ┆ 7.0  ┆ 7.0 ┆ … ┆ 8.0 ┆ 6.0 ┆ 5.0 ┆ 0.0 │
  └─────┴──────┴──────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-linearpairwise]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 0.8333 ┆ 0.8333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.7143 │
  │ 2   ┆ 0.8333 ┆ 0.0    ┆ 0.8333 ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.5    ┆ 0.6667 │
  │ 3   ┆ 0.8333 ┆ 0.8333 ┆ 0.0    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ 1.0    │
  │ 4   ┆ 0.75   ┆ 0.75   ┆ 0.5    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 1.0    │
  │ 5   ┆ 0.5    ┆ 1.0    ┆ 0.5    ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.75   ┆ 0.75   │
  │ 6   ┆ 0.3333 ┆ 1.0    ┆ 0.3333 ┆ … ┆ 1.0    ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 │
  │ 7   ┆ 1.0    ┆ 0.6667 ┆ 1.0    ┆ … ┆ 0.0    ┆ 0.3333 ┆ 0.6667 ┆ 1.0    │
  │ 8   ┆ 0.6667 ┆ 0.6667 ┆ 0.6667 ┆ … ┆ 0.3333 ┆ 0.0    ┆ 0.6667 ┆ 1.0    │
  │ 9   ┆ 0.75   ┆ 0.5    ┆ 1.0    ┆ … ┆ 0.6667 ┆ 0.6667 ┆ 0.0    ┆ 0.75   │
  │ 10  ┆ 0.7143 ┆ 0.6667 ┆ 1.0    ┆ … ┆ 1.0    ┆ 1.0    ┆ 0.75   ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-softdtw]
  shape: (10, 11)
  ┌─────┬─────────┬─────────┬─────────┬───┬─────────┬─────────┬─────────┬─────────┐
  │ id  ┆ 1       ┆ 2       ┆ 3       ┆ … ┆ 7       ┆ 8       ┆ 9       ┆ 10      │
  │ --- ┆ ---     ┆ ---     ┆ ---     ┆   ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ i64 ┆ f32     ┆ f32     ┆ f32     ┆   ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════╪═════════╪═════════╪═════════╪═══╪═════════╪═════════╪═════════╪═════════╡
  │ 1   ┆ -6.2132 ┆ 0.0592  ┆ -0.2545 ┆ … ┆ 3.0224  ┆ 3.2709  ┆ -0.8588 ┆ -2.7346 │
  │ 2   ┆ 0.0592  ┆ -4.0605 ┆ -0.7396 ┆ … ┆ -0.7048 ┆ 0.5908  ┆ -1.0683 ┆ -1.0492 │
  │ 3   ┆ -0.2545 ┆ -0.7396 ┆ -4.0817 ┆ … ┆ 1.6304  ┆ 1.6093  ┆ 1.248   ┆ -1.2068 │
  │ 4   ┆ 0.9389  ┆ -0.3894 ┆ -1.1677 ┆ … ┆ 1.8289  ┆ 1.8027  ┆ -0.0688 ┆ 1.1595  │
  │ 5   ┆ -0.032  ┆ 0.7233  ┆ -0.0413 ┆ … ┆ 1.8289  ┆ 0.248   ┆ 0.462   ┆ -0.7901 │
  │ 6   ┆ 1.0624  ┆ 2.2793  ┆ 0.2345  ┆ … ┆ 1.6089  ┆ 0.5526  ┆ 0.4116  ┆ 1.0515  │
  │ 7   ┆ 3.0224  ┆ -0.7048 ┆ 1.6304  ┆ … ┆ -2.5649 ┆ -1.2625 ┆ -0.7779 ┆ 2.3038  │
  │ 8   ┆ 3.2709  ┆ 0.5908  ┆ 1.6093  ┆ … ┆ -1.2625 ┆ -1.8268 ┆ 0.2622  ┆ 1.5454  │
  │ 9   ┆ -0.8588 ┆ -1.0683 ┆ 1.248   ┆ … ┆ -0.7779 ┆ 0.2622  ┆ -2.5735 ┆ 0.6614  │
  │ 10  ┆ -2.7346 ┆ -1.0492 ┆ -1.2068 ┆ … ┆ 2.3038  ┆ 1.5454  ┆ 0.6614  ┆ -5.3914 │
  └─────┴─────────┴─────────┴─────────┴───┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[chi2]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0   ┆ 1.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0   ┆ 1.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 1.0   ┆ 1.0   │
  │ seq_1   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 0.0   ┆ 0.789 │
  │ seq_2   ┆ 1.0     ┆ 1.0     ┆ 1.0     ┆ 0.789 ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[dtw]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[edit]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[lcp]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0   ┆ 3.0   │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 3.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[lcs]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_2 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ empty_3 ┆ 0.0     ┆ 0.0     ┆ 0.0     ┆ 2.0   ┆ 3.0   │
  │ seq_1   ┆ 2.0     ┆ 2.0     ┆ 2.0     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ 3.0     ┆ 3.0     ┆ 3.0     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[linearpairwise]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 0.5   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.5   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[softdtw]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬─────────┬─────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1   ┆ seq_2   │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---     │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32     ┆ f32     │
  ╞═════════╪═════════╪═════════╪═════════╪═════════╪═════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN     │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.5514 ┆ -0.1326 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ -0.1326 ┆ -1.2188 │
  └─────────┴─────────┴─────────┴─────────┴─────────┴─────────┘
# ---
# name: TestConfigRoundtrip.test_to_config_snapshot
  dict({
    'settings': dict({
      'agg_fun': 'sum',
      'default_metric': dict({
        'settings': dict({
          'agg_fun': 'mean',
          'entity_metric': dict({
            'settings': dict({
              'cost': None,
              'entity_feature': None,
              'mismatch_cost': 1.0,
            }),
            'type': 'hamming',
          }),
          'padding_penalty': None,
        }),
        'type': 'linearpairwise',
      }),
      'sequence_metrics': None,
      'weights': None,
    }),
    'type': 'aggregation',
  })
# ---
